Add auto downloader for missing input files